# G1emu

./: .cursorrules  CMakeLists.txt  g1emu.desktop  launch_g1emu.sh
src/: main.cpp
